It still needs work

--- a/blat10/CodeBlatt10.html
+++ b/blat10/CodeBlatt10.html
@@ -314,19 +314,24 @@ Your browser does not support the HTML5 canvas tag.</canvas><br>
             var color = objects[iIndex].getLighting(iPos);
 
 // BEGIN AUFGABE  c
-        // Surface Normal at p
-        /* The sum of ray and iRef is parallel to the surface, and their cross product as well. witht that, we can get the normal of the surface at that point */
-        var sNormal = ray.add( iReflect ).cross( ray.cross( iReflect ) );
-        // var refractionDirection = (?);
-        var Cdirect = getLighting( iPos );
-        var Creflect = r * traceRay( iPos, iReflect );
-        // var Crefract = refract * trace( iPos, refractionDirection );
-// END AUFGABE c
+            // first we make it finite
+            depth++;
+            if( maxDepth - depth >= 0 ) {
+                // Surface Normal at p
+                /* The sum of ray and iRef is parallel to the surface, and their cross product as well. witht that, we can get the normal of the surface at that point */
+                var sNormal = ray.add( iReflect ).cross( ray.cross( iReflect ) );
+                // var refractionDirection = (?);
+                // var Cdirect = getLighting( iPos );
+                var Creflect = traceRay( iPos, iReflect, depth ).toRgbVec().mul( r );
+                // var Crefract = refract * trace( iPos, refractionDirection );
+                color = color.add( Creflect );
+    // END AUFGABE c
 
-            return new Color(color.x, color.y, color.z, 255); 
+                return new Color(color.x, color.y, color.z, 255); 
+            }
         } else {
             return backColor;
-       }
+        }
     }
 
     var pix = 0;
